<resources>
    <string name="app_name">Assignment</string>
    <string name="temperature">%1$s%2$s</string>
    <string name="temperature_without_degree_symbol">%1$s C</string>
    <string name="error">Something went wrong at our end!</string>
    <string name="retry">Retry</string>
    <string name="owner">Owner/Organization</string>
    <string name="owner_hint">Enter Owner or Organization</string>
    <string name="search">Search</string>
    <string name="last_updated">Last Updated: %s</string>
    <string name="owner_name">Owner :-</string>
    <string name="project_name">Project Name :-</string>
    <string name="project_description">Description :-</string>
    <string name="project_link">Project Link :-</string>
    <string name="contributors">Contributors :-</string>
    <string name="contributors_count">Contributors Count :-</string>

</resources>