<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<TextView
    android:id="@+id/tvOwner"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/owner"
    android:textSize="22sp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:layout_marginStart="20dp"
    android:layout_marginTop="30dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:id="@+id/etOwner"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/tvOwner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/owner_hint"
        android:inputType="text"
        tools:ignore="LabelFor"
        android:importantForAutofill="no" />
    <Button
        android:id="@+id/btnSearch"
        android:layout_width="90dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@id/etOwner"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/black"
        android:text="@string/search"
        android:textColor="@color/white"
        />
</androidx.constraintlayout.widget.ConstraintLayout>